src/objects/PAC_Settings__c.object
<CustomObject>
    <fields>
        <fullName>CSV_Separator__c</fullName>
        <defaultValue>","</defaultValue>
        <label>CSV Separator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Deal_Notification_Emails__c</fullName>
        <defaultValue>'product_ops@pivotal.io'</defaultValue>
        <label>New Deal Notification Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAC_Email__c</fullName>
        <defaultValue>'product_ops@pivotal.io'</defaultValue>
        <label>PAC Email</label>
        <type>Email</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PAC Settings</label>
</CustomObject>